# s3tester

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  TESTING.md  build_binary.bat  build_binary.sh  pyproject.toml  pytest.ini  specify.md
.claude/: settings.local.json
.github/workflows/: tests.yml
docs/: cli-usage.md  configuration-reference.md  desc.md  index.md  logging-and-error-handling.md
examples/: README.md  access-control-test.yaml  create-test-data.sh  default-expected-result-config.yaml  extended-operations-test.yaml  file-upload-config.yaml  file-upload-test.yaml  logging-demo-config.yaml  performance-test.yaml  run-all-tests.sh  s3tester-guide.md  sample-data.txt  simple-config.yaml
specs/002-aws-s3-api/: cli-implementation.md  core-engine-implementation.md  data-model-implementation.md  data-model.md  implementation-audit.md  integration-architecture.md  operations-implementation.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  testing-patterns.md
specs/002-aws-s3-api/contracts/: cli-contract.md  config-schema.json
src/s3tester/: __init__.py  __main__.py  __version__.py  cli.py  cli_main.py  constants.py  exceptions.py  interfaces.py
src/s3tester/cli/: __init__.py  config_loader.py
src/s3tester/config/: __init__.py  models.py
src/s3tester/core/: __init__.py  client_factory.py  debug_helper.py  engine.py  facade.py  logging_config.py  operation_counter.py  progress.py  result_collector.py  validator.py
src/s3tester/integration/: __init__.py  error_handling.py  facade.py
src/s3tester/operations/: __init__.py  base.py  bucket.py  bucket_extended.py  bucket_policy.py  multipart.py  object.py  object_extended.py  parameters.py  registry.py  retry.py
src/s3tester/reporting/: __init__.py  formatters.py
tests/: __init__.py  test_utils.py
tests/contract/: test_cli_help.py  test_cli_list.py  test_cli_run.py  test_cli_validate.py  test_config_schema.py  test_file_paths.py  test_output_formats.py
tests/integration/: test_basic_operations.py  test_facade_operations.py  test_file_upload.py  test_parallel_execution.py  test_permissions.py
tests/unit/: conftest.py  test_cli.py  test_config_models.py  test_core.py  test_default_expected_result.py  test_engine_wrapper.py  test_interfaces.py  test_operations.py
tests/unit/operations/: __init__.py  conftest.py  test_bucket_extended_operations.py  test_bucket_operations.py  test_bucket_policy_operations.py  test_object_operations.py
